--- a/.drone.yml
+++ b/.drone.yml
@@ -9,4 +9,4 @@ script:
   - bundle exec knife cookbook test -o . -a
   - bundle exec foodcritic -f correctness ./
   - bundle exec rspec
-  - echo "If this is master, we next we release!!!!"
+  - echo "If this is master, next we release!!!!"
